--- a/log01.html
+++ b/log01.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Log 01 - Necros ARG</title>
+    <style>
+        body {
+            background-color: black; /* fundo preto */
+            color: white; /* texto branco */
+            font-family: 'Courier New', monospace; /* estilo de fonte misterioso */
+            padding: 20px;
+        }
+        a {
+            color: red; /* links vermelhos para destaque */
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>Você não deveria estar aqui</h1>
+    <p>Encontrei a clindesia. A presença é constante. Cada passo é coroa, cada assombramento estéreo. Não posso voltar mais.</p>
+    <p>Se você está nesse link, cuidado. Olhe ao seu redor. Você não está sozinho.</p>
+    <p><a href="index.html">Voltar para a página inicial</a></p>
+</body>
+</html>
